# src/models/ai_personas.py
@@ -4,6 +4,7 @@ from sqlalchemy.dialects.mysql import JSON
 from database import Base
 import uuid
 
+
 class AIPersona(Base):
     __tablename__ = 'ai_personas'
     __table_args__ = (
@@ -29,9 +30,11 @@ class AIPersona(Base):
     plant_size_impact_id = Column(String(36), ForeignKey('plant_size_impacts.plant_size_impact_id'), nullable=False)
     manufacturing_model_id = Column(String(36), ForeignKey('manufacturing_models.manufacturing_model_id'), nullable=False)
     behavioral_detail = Column(Text, nullable=False)
+    company_size_id = Column(String(36), ForeignKey('company_size.company_size_id'), nullable=False)
     status_active = Column(Boolean, nullable=False, server_default=text('true'))
     created_at = Column(TIMESTAMP, nullable=False, server_default=text("now()"))
     updated_at = Column(TIMESTAMP, nullable=False, server_default=text("now()"))
+    profile_pic = Column(String(255), nullable=True)  # Path or identifier for the uploaded profile picture (not necessarily a URL)
 
     # Relationships
     industry = relationship("Industry", back_populates="ai_persona",lazy="selectin")
@@ -39,6 +42,7 @@ class AIPersona(Base):
     plant_size_impact = relationship("PlantSizeImpact",back_populates="ai_persona",lazy="selectin")
     manufacturing_model = relationship("ManufacturingModel",back_populates="ai_persona",lazy="selectin")
     sessions=relationship("Session", back_populates="persona")
+    company_size_new = relationship("CompanySize", back_populates="ai_persona", lazy="selectin")
 
 
 
@@ -52,4 +56,3 @@ class AIPersona(Base):
 
 
 
-    
